[package]
name = "mini-redis"
version = "0.1.0"
authors = ["Joe <joemitchard92@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   
bytes = "1.3.0"                                     
thiserror = "1.0.32"                                
tokio = { version = "1.23.0", features = ["full"] } 
